# cobaltdb

./: CMakeLists.txt  README.md  build.ps1  build.sh  cobalt  example.l27  go.mod  go.sum  main_api.go  package-lock.json  package.json  server.js  todo  todo.txt
GUI/pantalla/: app.js  index.html  seleccionservidor.html  styles.css
L-27/: interpreter.go  lexer.go  parser.go
Main_comp/: dataProcessor.go  engine.go  nodes.go  relations.go  users.go
Storage/: index.go  storage.go
Storage_Preprocessing/: data_processing.go
api/: router.go
db/Alex/test/Nodes/: Chito-4.json  Fagua-5.json  Jose-2  Makoto-3.json  Mia-1.json  Nikolai-6.json
db/Alex/test/Relations/: Tutoria-0.json  Tutoria2-1.json  Tutoria3-2.json  Tutoria4-4.json  only owner-2  only owner-3.json
db/Alice/test/Nodes/: Alex-12.json  Alex-15.json  Alex-16.json  Alex-19.json  Alex-2.json  Alex-20.json  Alex-22.json  Alex-23.json  Alex-25.json  Alex-29.json  Alex-32.json  Alex-33.json  Alex-34.json  Alex-35.json  Alex-36.json  Alex-37.json  Alex-5.json  Alex-57.json  Alex-60.json  Alex-83.json  Alex-86.json  Alex-88.json  Alex-91.json  Alice-0.json  Bob-1.json  Cameron-19.json  Cameron-22.json  Cameron-25.json  Cameron-28.json  Cameron-46.json  Cameron-49.json  Cameron-77.json  Cameron-78.json  Cameron-80.json  Cameron-81.json  Cameron-86.json  Cameron-89.json  Cameron-90.json  Cameron-93.json  Casey-10.json  (+157 more)
db/Alice/test/Relations/: Close Friends-0.json  Close Friends-2.json  CommonAttributeAge_1-1.json  CommonAttributeAge_1-5.json  CommonAttributeAge_11-15.json  CommonAttributeAge_112-112.json  CommonAttributeAge_112-116.json  CommonAttributeAge_114-114.json  CommonAttributeAge_115-119.json  CommonAttributeAge_119-119.json  CommonAttributeAge_119-123.json  CommonAttributeAge_12-16.json  CommonAttributeAge_120-120.json  CommonAttributeAge_121-125.json  CommonAttributeAge_125-125.json  CommonAttributeAge_125-129.json  CommonAttributeAge_127-127.json  CommonAttributeAge_127-131.json  CommonAttributeAge_131-131.json  CommonAttributeAge_131-135.json  CommonAttributeAge_135-135.json  CommonAttributeAge_135-139.json  CommonAttributeAge_139-139.json  CommonAttributeAge_139-143.json  CommonAttributeAge_14-18.json  CommonAttributeAge_144-144.json  CommonAttributeAge_144-148.json  CommonAttributeAge_15-15.json  CommonAttributeAge_15-19.json  CommonAttributeAge_158-158.json  CommonAttributeAge_158-162.json  CommonAttributeAge_160-160.json  CommonAttributeAge_160-164.json  CommonAttributeAge_161-161.json  CommonAttributeAge_161-165.json  CommonAttributeAge_169-169.json  CommonAttributeAge_169-173.json  CommonAttributeAge_17-17.json  CommonAttributeAge_17-21.json  CommonAttributeAge_174-174.json  (+1136 more)
db/test/: Joe  Makoto
db/test/Nodes/: Chito  Joe-0  Jose  Mia
db/test/Relations/: Tutoria  Tutoria-0  Tutoria2  Tutoria2-1  only owner  only owner-2
import/: Project-Management-Sample-Data.xlsx  salary_country.xlsx
lib/GUI/: conexion1.js
lib/GUI/pantalla/: app.js  appColors.js  datos.json  index.html  styles.css
lib/L-27/: interpreter.cpp  lexer.cpp  lexer.h  parser.cpp
lib/Main_comp/: category.cpp  graph.cpp  node.cpp  relation.cpp  users.cpp
lib/Storage/: data_process.cpp  storage.cpp
lib/Storage/xlnt/: xlnt.hpp  xlnt_config.hpp
lib/Storage/xlnt/cell/: cell.hpp  cell_reference.hpp  cell_type.hpp  comment.hpp  hyperlink.hpp  index_types.hpp  phonetic_run.hpp  rich_text.hpp  rich_text_run.hpp
lib/Storage/xlnt/drawing/: spreadsheet_drawing.hpp
lib/Storage/xlnt/packaging/: ext_list.hpp  manifest.hpp  (+2 more)
src/: Joe  Mia  cobalt  main.cpp  main.go  test.json
(+51 files in other folders)
